try different versions

--- a/public/auth-end.html
+++ b/public/auth-end.html
@@ -7,17 +7,30 @@
   </head>
 
   <body>
+    <!-- Upddate from 2.22.0 to 2.23.0 -->
     <script
-      src="https://res.cdn.office.net/teams-js/2.22.0/js/MicrosoftTeams.min.js"
-      integrity="sha384-WSG/sWulIv7rel5TnFlH8JTpxl2OxzZh9Lux2mIzBFiTRLFvMBeFv9VURu/3vQdx"
+      src="https://res.cdn.office.net/teams-js/2.23.0/js/MicrosoftTeams.min.js"
+      integrity="sha384-08XJvrutoSVYTA8PQeUgetTKn8B7JE73C5BdAfWnHZ5WnSFFQO6g1FGmSqxsrAzb"
       crossorigin="anonymous"
     ></script>
+
+    <!-- Upddate from 2.21.0 to 2.35.0 -->
     <script
       type="text/javascript"
       src="https://alcdn.msauth.net/browser/2.21.0/js/msal-browser.min.js"
       integrity="sha384-s/NxjjAgw1QgpDhOlVjTceLl4axrp5nqpUbCPOEQy1PqbFit9On6uw2XmEF1eq0s"
       crossorigin="anonymous"
     ></script>
+
+    <!-- <script
+    type="text/javascript"
+    src="https://alcdn.msauth.net/browser/2.35.0/js/msal-browser.min.js"
+    integrity="sha384-o+Sncs5XJ3NEAeriM/FV8YGZrh7mZk4GfNutRTbYjsDNJxb7caCLeqiDabistgwW"
+    crossorigin="anonymous"></script> -->
+
+    <!-- <script type="text/javascript" src="https://alcdn.msauth.net/browser/2.5.2/js/msal-browser.min.js"></script> -->
+    <!-- <script type="text/javascript" src="https://alcdn.msauth.net/browser/2.8.0/js/msal-browser.min.js"></script> -->
+
     <script type="text/javascript">
       var currentURL = new URL(window.location);
       var clientId = currentURL.searchParams.get("clientId");
